# basics

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  basics_config.h.in  playground.c
sorting/: CMakeLists.txt  bubble_sort.c  sorting.h
src/: lib.rs
src/sorting/: binary_search.rs  bubble_sort.rs  bubblesort.rs  heap.rs  heapsort.rs  mergesort.rs  mergesort_bufferless.rs  mod.rs  quicksort.rs
tests/: helpers.rs  test_binary_search.rs  test_bubble_sort.rs  test_bubblesort.rs  test_heap.rs  test_quicksort.rs  test_sorting.rs
